# pokeprism

./: .env.example  .gitignore  Makefile  README.md  audit_findings.md  audit_script.py  batch10_cards.json  batch7_cards.json  batch8_cards.json  batch9_cards.json  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  init.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4afceada2d2a_initial_schema.py  4feeaff15b4d_add_target_consecutive_rounds.py  5b7e9c2d4a11_add_simulation_opponent_results.py  8ac02d648b4f_add_card_def_id_to_decisions.py  b9f8e1d2c3a4_observed_play_foundation.py  c3e91f7a5b22_add_best_deck_snapshot.py  d6b7f3c91a2e_add_deck_mutation_evidence.py  e1f2a3b4c5d6_observed_play_events.py  f2a3b4c5d6e7_observed_card_mentions.py  g3h4i5j6k7l8_observed_play_memory_ingestion.py  (+4 more)
backend/app/: config.py  main.py
backend/app/api/: admin.py  (+9 more)
backend/scripts/: add_batch10_cards.py  add_batch11_cards.py  add_batch12_cards.py  add_batch13_cards.py  add_batch14_cards.py  add_batch15_cards.py  add_batch16_cards.py  add_batch17_cards.py  add_batch18_cards.py  add_batch19_cards.py  add_batch20_cards.py  add_batch5_cards.py  add_batch6_cards.py  add_batch8_cards.py  add_batch9_cards.py  ai_diagnostic.py  ai_diagnostic_3games.py  audit_card_implementations.py  card_effect_audit_probe.py  observed_play_low_confidence_audit.py  run_coach.py  run_hh.py  seed_cards.py  validate_card_audit_report.py  validate_phase5.py  validate_phase6.py  validate_phase7.py
backend/tests/: conftest.py  test_config.py
(+1869 files in other folders)
